--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/swri_console
-	previous = 
-	base = 904edb2
+	previous = 904edb2
+	base = e67b582
 	trim = 
 	trimbase = 
